fix: make layout stretch

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -38,8 +38,8 @@
 }
 
 .wrapper {
-    margin: 0 auto;
-    width: 1600px;
+    /*margin: 0 auto;*/
+    /*width: 1600px;*/
     font-family: Roboto-Regular;
     font-size: 16px;
 }
@@ -58,24 +58,6 @@
     cursor: pointer;
     z-index: 1;
 }
-
-/*.btn::before {*/
-/*    content:"";*/
-/*    position: absolute;*/
-/*    top: -2px;*/
-/*    right: -2px;*/
-/*    bottom: -2px;*/
-/*    left: -2px;*/
-/*    background: linear-gradient(113.96deg, #E47209 100%, #E47209 100%);*/
-/*    z-index: -1;*/
-/*    transition: opacity 0.3s linear;*/
-/*    opacity: 0;*/
-/*    border-radius: 25px;*/
-/*}*/
-
-/*.btn:hover::before {*/
-/*    opacity: 1;*/
-/*}*/
 
 .btn:hover {
     background: #E47209;
@@ -125,7 +107,7 @@ a {
     align-items: center;
     gap: 63px;
     padding: 0 220px;
-    width: 1600px;
+    width: 100%;
     height: 80px;
     background-color: var(--bright-color);
     color: var(--light-color);
@@ -199,7 +181,7 @@ a {
     position: relative;
     background-image: url(../../assets/images/Giant_Panda.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     height: 780px;
 }
 
@@ -368,12 +350,12 @@ position: absolute;
 
 .second-section-btn {
     display: block;
-    margin: 90px auto 105px auto;
+    margin: 70px auto 100px auto;
 }
 
 .second-sec-dec {
     position: absolute;
-    bottom: -90px;
+    bottom: -100px;
 }
 
 .left-dec {
@@ -457,7 +439,7 @@ position: absolute;
 
 .third-section-btn {
     display: block;
-    margin: 40px auto 0 auto;
+    margin: 60px auto 0 auto;
 }
 
 /*Main section 4*/
